# qr_ros2_reader

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: qrcode.launch.py
qr/: qr.py
